--- a/dashboard.html
+++ b/dashboard.html
@@ -1,76 +1,112 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>AI FUTURE POWER | Dashboard</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet" />
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Orbitron', monospace;
-      background: linear-gradient(to bottom right, #000000, #111111);
-      color: #0f0;
-      display: flex;
-      height: 100vh;
-      overflow: hidden;
-    }
-    .sidebar {
-      width: 100%;
-      max-width: 450px;
-      background: #111;
-      border-right: 3px solid #0f0;
-      box-shadow: 2px 0 12px #0f0;
-      padding: 20px 15px;
-      display: flex;
-      flex-direction: row;
-      justify-content: space-around;
-      align-items: center;
-      gap: 20px;
-      box-sizing: border-box;
-    }
-    .sidebar h2 {
-      color: #0ff;
-      margin: 0 15px 0 0;
-      font-size: 20px;
-      white-space: nowrap;
-    }
-    .sidebar button {
-      background: transparent;
-      border: 2px solid #0f0;
-      color: #0f0;
-      font-size: 16px;
-      padding: 14px 18px;
-      border-radius: 10px;
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-      gap: 8px;
-      transition: background 0.3s, color 0.3s, box-shadow 0.3s;
-      white-space: nowrap;
-    }
-    .sidebar button:hover {
-      background: #0f0;
-      color: #000;
-      box-shadow: 0 0 15px #0f0;
-    }
-    .content {
-      flex: 1;
-      background: #111;
-      border-left: 3px solid #0f0;
-    }
-  </style>
-</head>
-<body>
-  <div class="sidebar">
-    <h2>⚙️ MENU</h2>
-    <button>➕ Create Task</button>
-    <button>📋 View Specs</button>
-    <button>👤 Agent DB</button>
-    <button>👥 Active Employers</button>
-  </div>
-  <div class="content">
-    <!-- Empty right side -->
-  </div>
-</body>
-</html>
+import React from "react";
+
+export default function Dashboard() {
+  return (
+    <div
+      style={{
+        backgroundColor: "#111",
+        height: "100vh",
+        display: "flex",
+        color: "lime",
+        fontFamily: "Arial, sans-serif",
+      }}
+    >
+      {/* Left Sidebar */}
+      <div
+        style={{
+          width: "300px",
+          borderRight: "4px solid lime",
+          padding: "20px",
+          display: "flex",
+          flexDirection: "column",
+          alignItems: "center", // center horizontally
+          gap: "20px",
+        }}
+      >
+        <div style={{ display: "flex", alignItems: "center", gap: "8px" }}>
+          <span style={{ fontSize: "24px", color: "#0ff", fontWeight: "bold" }}>
+            ⚙️ MENU
+          </span>
+        </div>
+
+        {/* Buttons container horizontally centered */}
+        <div
+          style={{
+            display: "flex",
+            justifyContent: "center",
+            gap: "20px",
+            width: "100%", // take full width of sidebar
+          }}
+        >
+          <button
+            style={{
+              border: "2px solid lime",
+              background: "transparent",
+              color: "lime",
+              fontSize: "16px",
+              padding: "10px 20px",
+              borderRadius: "10px",
+              cursor: "pointer",
+              transition: "0.3s",
+            }}
+            onMouseEnter={(e) => (e.target.style.background = "lime")}
+            onMouseLeave={(e) => (e.target.style.background = "transparent")}
+          >
+            ➕ Create Task
+          </button>
+          <button
+            style={{
+              border: "2px solid lime",
+              background: "transparent",
+              color: "lime",
+              fontSize: "16px",
+              padding: "10px 20px",
+              borderRadius: "10px",
+              cursor: "pointer",
+              transition: "0.3s",
+            }}
+            onMouseEnter={(e) => (e.target.style.background = "lime")}
+            onMouseLeave={(e) => (e.target.style.background = "transparent")}
+          >
+            📋 View Specs
+          </button>
+          <button
+            style={{
+              border: "2px solid lime",
+              background: "transparent",
+              color: "lime",
+              fontSize: "16px",
+              padding: "10px 20px",
+              borderRadius: "10px",
+              cursor: "pointer",
+              transition: "0.3s",
+            }}
+            onMouseEnter={(e) => (e.target.style.background = "lime")}
+            onMouseLeave={(e) => (e.target.style.background = "transparent")}
+          >
+            👤 Agent DB
+          </button>
+          <button
+            style={{
+              border: "2px solid lime",
+              background: "transparent",
+              color: "lime",
+              fontSize: "16px",
+              padding: "10px 20px",
+              borderRadius: "10px",
+              cursor: "pointer",
+              transition: "0.3s",
+            }}
+            onMouseEnter={(e) => (e.target.style.background = "lime")}
+            onMouseLeave={(e) => (e.target.style.background = "transparent")}
+          >
+            👥 Active Employers
+          </button>
+        </div>
+      </div>
+
+      {/* Right empty main area */}
+      <div style={{ flex: 1, backgroundColor: "#111" }}></div>
+    </div>
+  );
+}
