--- a/dashboard.html
+++ b/dashboard.html
@@ -1,59 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Dashboard</title>
-<style>
-  body {
-    margin: 0;
-    background-color: #111;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    font-family: Arial, sans-serif;
-  }
-  .button-container {
-    display: flex;
-    gap: 20px;
-  }
-  button {
-    border: 2px solid lime;
-    background: transparent;
-    color: lime;
-    font-size: 16px;
-    padding: 10px 20px;
-    border-radius: 10px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    gap: 8px;
-    transition: background-color 0.3s;
-  }
-  button:hover {
-    background-color: lime;
-    color: black;
-  }
-  .icon {
-    font-size: 18px;
-  }
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Dashboard</title>
+  <style>
+    body {
+      margin: 0;
+      background-color: #111;
+      color: lime;
+      font-family: Arial, sans-serif;
+    }
+    .center-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding-top: 100px;
+      flex-direction: column;
+    }
+    .button-container {
+      display: flex;
+      gap: 20px;
+      margin-bottom: 30px;
+    }
+    button {
+      border: 2px solid lime;
+      background: transparent;
+      color: lime;
+      font-size: 16px;
+      padding: 10px 20px;
+      border-radius: 10px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+    button:hover {
+      background-color: lime;
+      color: black;
+    }
+
+    .view {
+      display: none;
+      padding: 20px;
+      border: 1px solid lime;
+      width: 50%;
+      background-color: #222;
+      border-radius: 10px;
+    }
+
+    .view.active {
+      display: block;
+    }
+
+    input, textarea {
+      width: 100%;
+      padding: 8px;
+      margin-top: 5px;
+      margin-bottom: 15px;
+      border-radius: 5px;
+      border: none;
+    }
+
+    label {
+      font-weight: bold;
+      display: block;
+    }
+
+    .back-btn {
+      margin-top: 10px;
+      background-color: lime;
+      color: black;
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
-  <div class="button-container">
-    <button onclick="location.href='create-task.html'">
-      <span class="icon">➕</span> Create Task
-    </button>
-    <button onclick="location.href='view-specs.html'">
-      <span class="icon">📋</span> View Specs
-    </button>
-    <button onclick="location.href='agent-db.html'">
-      <span class="icon">👤</span> Agent DB
-    </button>
-    <button onclick="location.href='active-employers.html'">
-      <span class="icon">👥</span> Active Employers
-    </button>
+  <div class="center-container">
+    <div class="button-container">
+      <button onclick="showView('createTask')">➕ Create Task</button>
+      <button onclick="showView('viewSpecs')">📋 View Specs</button>
+      <button onclick="showView('agentDB')">👤 Agent DB</button>
+      <button onclick="showView('activeEmployers')">👥 Active Employers</button>
+    </div>
+
+    <!-- CREATE TASK -->
+    <div id="createTask" class="view">
+      <h2>Create Task</h2>
+      <label>Client Name:</label>
+      <input type="text" />
+      <label>Client Amount:</label>
+      <input type="number" />
+      <label>Work Details:</label>
+      <textarea></textarea>
+      <label><input type="checkbox" /> Full Payment Received</label>
+      <br />
+      <button>Submit</button>
+      <button class="back-btn" onclick="goBack()">← Back</button>
+    </div>
+
+    <!-- VIEW SPECS -->
+    <div id="viewSpecs" class="view">
+      <h2>Specs Info</h2>
+      <p>Details of work specifications go here...</p>
+      <button class="back-btn" onclick="goBack()">← Back</button>
+    </div>
+
+    <!-- AGENT DB -->
+    <div id="agentDB" class="view">
+      <h2>Agent Database</h2>
+      <p>Agent-related information and records.</p>
+      <button class="back-btn" onclick="goBack()">← Back</button>
+    </div>
+
+    <!-- ACTIVE EMPLOYERS -->
+    <div id="activeEmployers" class="view">
+      <h2>Active Employers</h2>
+      <p>List of active employers...</p>
+      <button class="back-btn" onclick="goBack()">← Back</button>
+    </div>
   </div>
+
+  <script>
+    function showView(viewId) {
+      document.querySelectorAll('.view').forEach(v => v.classList.remove('active'));
+      document.getElementById(viewId).classList.add('active');
+      document.querySelector('.button-container').style.display = 'none';
+    }
+
+    function goBack() {
+      document.querySelectorAll('.view').forEach(v => v.classList.remove('active'));
+      document.querySelector('.button-container').style.display = 'flex';
+    }
+  </script>
 </body>
 </html>
